--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -29,6 +30,7 @@
     "eslint": "^8.54.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "husky": "^8.0.0",
     "path": "^0.12.7",
     "postcss": "^8.4.31",
     "prettier": "3.1.0",
@@ -36,7 +38,6 @@
     "react-router-dom": "^6.20.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "husky": "^8.0.0"
+    "vite": "^5.0.4"
   }
 }
