--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
+    "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.3",
