--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "concurrently": "^8.2.2",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.12",
